syntax = "proto3";

package passwords;

option go_package = "passwords/proto";

message User {
  string login = 1;       // login
  string password = 2;    // password
  string name = 3;        // name 
  string surname = 4;     // surname
  string phone = 5;       // phone
  
}
message Account {
  string user_login = 1;      //user login
  string account_login = 2;     //account login 
  string password = 3;    //account password     
  string description = 4; //text description for an account
}


// User request
message AddUserRequest {
  User User = 1;
}

message AddUserResponse {
  string error = 1; // error
}

message GetUserRequest {
  string login = 1;
}

message GetUserResponse {
  User   User = 1;
  string error = 2;
}

// Account request
message AddAccountRequest {
  User Account = 1;
}

message AddUserResponse {
  string error = 1; // error
}

message GetUserRequest {
  string login = 1;
}

message GetUserResponse {
  User   User = 1;
  string error = 2;
}









service Service {
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
  rpc AddUserMulti( stream AddUserRequest) returns ( stream AddUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserMulti(stream GetUserRequest) returns (stream GetUserResponse);
} 